fix sidebar z-index and share buttons

--- a/src/app/layouts/site-layout/site-layout.component.scss
+++ b/src/app/layouts/site-layout/site-layout.component.scss
@@ -22,7 +22,7 @@
   opacity: 1;
   text-align: left;
   top: 130px;
-  z-index: 94034;
+  z-index: 1;
   animation: fadeInRight 1s ease-in-out;
 }
 
